--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
+  "dependencies": {
+    "@prisma/client": "^5.4.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.0.1",
+    "prisma": "^5.4.2"
+  },
   "name": "quotesapp",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js",
+    "generate": "npx prisma generate",
+    "migrate": "npx prisma migrate dev"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
-  }
+  "description": ""
 }
