--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve:dev": "set NODE_ENV=development && dotenv -e .env.development nodemon app.js",
     "serve:prod": "set NODE_ENV=production && dotenv -e .env.production nodemon app.js",
+    "start": "nodemon app.js",
     "migrate:dev": "dotenv -e .env.development npx prisma migrate dev",
     "migrate:prod": "dotenv -e .env.production npx prisma migrate dev",
     "generate": "npx prisma generate",
