--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve:dev": "set NODE_ENV=development && dotenv -e .env.development nodemon app.js",
-    "serve:prod": "set NODE_ENV=production && dotenv -e .env.production nodemon app.js",
+    "start": "node app.js",
+    "generate": "npx prisma generate",
+    "serve:dev": "dotenv -e .env.development nodemon app.js",
+    "serve:prod": "dotenv -e .env.production nodemon app.js",
     "migrate:dev": "dotenv -e .env.development npx prisma migrate dev",
     "migrate:prod": "dotenv -e .env.production npx prisma migrate dev",
-    "generate": "npx prisma generate",
-    "studio": "dotenv -e .env.development npx prisma studio",
-    "start": "node app.js"
+    "studio:dev": "dotenv -e .env.development npx prisma studio",
+    "studio:prod": "dotenv -e .env.production npx prisma studio"
   },
   "keywords": [],
   "author": "",
