--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "generate": "npx prisma generate",
-    "serve:dev": "dotenv -e .env.development nodemon app.js",
-    "serve:prod": "dotenv -e .env.production nodemon app.js",
+    "dev": "dotenv -e .env.development nodemon app.js",
+    "prod": "dotenv -e .env.production nodemon app.js",
     "migrate:dev": "dotenv -e .env.development npx prisma migrate dev",
     "migrate:prod": "dotenv -e .env.production npx prisma migrate dev",
     "studio:dev": "dotenv -e .env.development npx prisma studio",
